# tkww-project

./: .gitignore  404.html  Dockerfile  README.md  app.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  retrainings.py
.github/workflows/: cd.yml  ci.yml  schtask.yml
controller/: index.html
docs/: controller.md  index.md  logger.md  retrainings.md  services.md  utils.md
logger/: index.html
retrainings/: index.html
search/: search_index.json
services/: index.html
tests/unit/: test_model_controller.py  test_model_service.py
tkww_api/: __init__.py
tkww_api/controllers/: model_controller.py
tkww_api/envelopes/: model_envelope.py
tkww_api/services/: model_service.py
tkww_api/utils/: logger.py  utils.py
tkww_api/utils/logging_config/: config.yml
utils/: index.html
